# HexxyInTheAlps

./: .copier-answers.yml  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: build.yml  release.yml
Common/: build.gradle.kts
Common/src/main/java/gay/object/hexxyinthealps/mixin/: HexxyInTheAlpsMixinConfigPlugin.java  MixinCastingVM.java  MixinDatagenMain.java  MixinIota.java
Common/src/main/java/gay/object/hexxyinthealps/mixin/interop/complexhex/: MixinBubbleIota.java
Common/src/main/kotlin/gay/object/hexxyinthealps/: HexxyInTheAlps.kt  HexxyInTheAlpsAbstractions.kt  HexxyInTheAlpsClient.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/casting/actions/spells/: OpCongratulate.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/config/: HexxyInTheAlpsClientConfig.kt  HexxyInTheAlpsConfig.kt  HexxyInTheAlpsServerConfig.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/datagen/: HexxyInTheAlpsActionTags.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/networking/: HexxyInTheAlpsNetworking.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/networking/handler/: ClientMessageHandler.kt  ServerMessageHandler.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/networking/msg/: HexxyInTheAlpsMessage.kt  MsgSyncConfigS2C.kt
Common/src/main/kotlin/gay/object/hexxyinthealps/registry/: HexxyInTheAlpsActions.kt  HexxyInTheAlpsRegistrar.kt
Common/src/main/resources/: architectury.common.json  hexxyinthealps-common.mixins.json
Common/src/main/resources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/patterns/great_spells/: dummy_great_spells.json5
Common/src/main/resources/assets/hexxyinthealps/lang/: en_us.flatten.json5
Fabric/: build.gradle.kts
Fabric/src/main/kotlin/gay/object/hexxyinthealps/fabric/: FabricHexxyInTheAlps.kt  FabricHexxyInTheAlpsClient.kt  FabricHexxyInTheAlpsModMenu.kt  FabricHexxyInTheAlpsServer.kt  HexxyInTheAlpsAbstractionsImpl.kt
Fabric/src/main/kotlin/gay/object/hexxyinthealps/fabric/datagen/: FabricHexxyInTheAlpsDatagen.kt
Fabric/src/main/resources/: fabric.mod.json  hexxyinthealps-fabric.mixins.json
Forge/: build.gradle.kts
Forge/src/main/kotlin/gay/object/hexxyinthealps/forge/: ForgeHexxyInTheAlps.kt  ForgeHexxyInTheAlpsClient.kt  ForgeHexxyInTheAlpsServer.kt  HexxyInTheAlpsAbstractionsImpl.kt
Forge/src/main/kotlin/gay/object/hexxyinthealps/forge/datagen/: ForgeHexxyInTheAlpsDatagen.kt
Forge/src/main/resources/: hexxyinthealps-forge.mixins.json  pack.mcmeta
buildSrc/src/main/kotlin/hexxyinthealps/: java.gradle.kts  minecraft.gradle.kts  mod-publish.gradle.kts  platform.gradle.kts
buildSrc/src/main/kotlin/hexxyinthealps/utils/: mod-dependencies.gradle.kts
doc/: README.md  hexdoc.toml
doc/resources/assets/hexxyinthealps/lang/: en_us.flatten.json5
doc/src/hexdoc_hexxyinthealps/: _hooks.py
gradle/: libs.versions.toml
(+1 files in other folders)
